--- a/assets/css/spring2017/main.scss
+++ b/assets/css/spring2017/main.scss
@@ -119,112 +119,64 @@ label{
 	>.element:not(.isMobile){
 		&.e1{
 
-			transform: rotate(0deg);
-			-ms-transform: rotate(0deg);
-			-webkit-transform: rotate(0deg);
-			-moz-transform: rotate(0deg);
-			-o-transform: rotate(0deg);
+			@include rotate(0);
 
 			@keyframes e1-close{
 				from{
 					top: 0px;
-					transform: rotate(0deg);
-					-ms-transform: rotate(0deg);
-					-webkit-transform: rotate(0deg);
-					-moz-transform: rotate(0deg);
-					-o-transform: rotate(0deg);
+					@include rotate(0);
 				}
 				to{
 					top: 29px;
-					transform: rotate(45deg);
-					-ms-transform: rotate(45deg);
-					-webkit-transform: rotate(45deg);
-					-moz-transform: rotate(45deg);
-					-o-transform: rotate(45deg);
+					@include rotate(45);
 				}
 			}
 			animation: e1-close .2s ease-out 0s forwards;
 		}
 		&.e2{
 
-			transform: rotate(90deg);
-			-ms-transform: rotate(90deg);
-			-webkit-transform: rotate(90deg);
-			-moz-transform: rotate(90deg);
-			-o-transform: rotate(90deg);
+			@include rotate(90);
 
 			@keyframes e2-close{
 				from{
 					left: -20px;
-					transform: rotate(90deg);
-					-ms-transform: rotate(90deg);
-					-webkit-transform: rotate(90deg);
-					-moz-transform: rotate(90deg);
-					-o-transform: rotate(90deg);
+					@include rotate(90);
 				}
 				to{
 					left: 10px;
-					transform: rotate(135deg);
-					-ms-transform: rotate(135deg);
-					-webkit-transform: rotate(135deg);
-					-moz-transform: rotate(135deg);
-					-o-transform: rotate(135deg);
+					@include rotate(135);
 				}
 			}
 			animation: e2-close .2s ease-out .05s forwards;
 		}
 		&.e3{
 
-			transform: rotate(90deg);
-			-ms-transform: rotate(90deg);
-			-webkit-transform: rotate(90deg);
-			-moz-transform: rotate(90deg);
-			-o-transform: rotate(90deg);
+			@include rotate(90);
 
 			@keyframes e3-close{
 				from{
 					right: -20px;
-					transform: rotate(90deg);
-					-ms-transform: rotate(90deg);
-					-webkit-transform: rotate(90deg);
-					-moz-transform: rotate(90deg);
-					-o-transform: rotate(90deg);
+					@include rotate(90);
 				}
 				to{
 					right: 10px;
-					transform: rotate(135deg);
-					-ms-transform: rotate(135deg);
-					-webkit-transform: rotate(135deg);
-					-moz-transform: rotate(135deg);
-					-o-transform: rotate(135deg);
+					@include rotate(135);
 				}
 			}
 			animation: e3-close .2s ease-out .1s forwards;
 		}
 		&.e4{
 
-			transform: rotate(0deg);
-			-ms-transform: rotate(0deg);
-			-webkit-transform: rotate(0deg);
-			-moz-transform: rotate(0deg);
-			-o-transform: rotate(0deg);
+			@include rotate(0);
 
 			@keyframes e4-close{
 				from{
 					bottom: 0px;
-					transform: rotate(0deg);
-					-ms-transform: rotate(0deg);
-					-webkit-transform: rotate(0deg);
-					-moz-transform: rotate(0deg);
-					-o-transform: rotate(0deg);
+					@include rotate(0);
 				}
 				to{
 					bottom: 29px;
-					transform: rotate(45deg);
-					-ms-transform: rotate(45deg);
-					-webkit-transform: rotate(45deg);
-					-moz-transform: rotate(45deg);
-					-o-transform: rotate(45deg);
+					@include rotate(45);
 				}
 			}
 			animation: e4-close .2s ease-out .15s forwards;
@@ -234,112 +186,64 @@ label{
 	>.element.isMobile{
 		&.e1{
 
-			transform: rotate(0deg);
-			-ms-transform: rotate(0deg);
-			-webkit-transform: rotate(0deg);
-			-moz-transform: rotate(0deg);
-			-o-transform: rotate(0deg);
+			@include rotate(0);
 
 			@keyframes e1-close-m{
 				from{
 					top: 10px;
-					transform: rotate(0deg);
-					-ms-transform: rotate(0deg);
-					-webkit-transform: rotate(0deg);
-					-moz-transform: rotate(0deg);
-					-o-transform: rotate(0deg);
+					@include rotate(0);
 				}
 				to{
 					top: 29px;
-					transform: rotate(45deg);
-					-ms-transform: rotate(45deg);
-					-webkit-transform: rotate(45deg);
-					-moz-transform: rotate(45deg);
-					-o-transform: rotate(45deg);
+					@include rotate(45);
 				}
 			}
 			animation: e1-close-m .2s ease-out 0s forwards;
 		}
 		&.e2{
 
-			transform: rotate(90deg);
-			-ms-transform: rotate(90deg);
-			-webkit-transform: rotate(90deg);
-			-moz-transform: rotate(90deg);
-			-o-transform: rotate(90deg);
+			@include rotate(90);
 
 			@keyframes e2-close-m{
 				from{
 					left: -10px;
-					transform: rotate(90deg);
-					-ms-transform: rotate(90deg);
-					-webkit-transform: rotate(90deg);
-					-moz-transform: rotate(90deg);
-					-o-transform: rotate(90deg);
+					@include rotate(90);
 				}
 				to{
 					left: 10px;
-					transform: rotate(135deg);
-					-ms-transform: rotate(135deg);
-					-webkit-transform: rotate(135deg);
-					-moz-transform: rotate(135deg);
-					-o-transform: rotate(135deg);
+					@include rotate(135);
 				}
 			}
 			animation: e2-close-m .2s ease-out .05s forwards;
 		}
 		&.e3{
 
-			transform: rotate(90deg);
-			-ms-transform: rotate(90deg);
-			-webkit-transform: rotate(90deg);
-			-moz-transform: rotate(90deg);
-			-o-transform: rotate(90deg);
+			@include rotate(90);
 
 			@keyframes e3-close-m{
 				from{
 					right: -10px;
-					transform: rotate(90deg);
-					-ms-transform: rotate(90deg);
-					-webkit-transform: rotate(90deg);
-					-moz-transform: rotate(90deg);
-					-o-transform: rotate(90deg);
+					@include rotate(90);
 				}
 				to{
 					right: 10px;
-					transform: rotate(135deg);
-					-ms-transform: rotate(135deg);
-					-webkit-transform: rotate(135deg);
-					-moz-transform: rotate(135deg);
-					-o-transform: rotate(135deg);
+					@include rotate(135);
 				}
 			}
 			animation: e3-close-m .2s ease-out .1s forwards;
 		}
 		&.e4{
 
-			transform: rotate(0deg);
-			-ms-transform: rotate(0deg);
-			-webkit-transform: rotate(0deg);
-			-moz-transform: rotate(0deg);
-			-o-transform: rotate(0deg);
+			@include rotate(0);
 
 			@keyframes e4-close-m{
 				from{
 					bottom: 10px;
-					transform: rotate(0deg);
-					-ms-transform: rotate(0deg);
-					-webkit-transform: rotate(0deg);
-					-moz-transform: rotate(0deg);
-					-o-transform: rotate(0deg);
+					@include rotate(0);
 				}
 				to{
 					bottom: 29px;
-					transform: rotate(45deg);
-					-ms-transform: rotate(45deg);
-					-webkit-transform: rotate(45deg);
-					-moz-transform: rotate(45deg);
-					-o-transform: rotate(45deg);
+					@include rotate(45);
 				}
 			}
 			animation: e4-close-m .2s ease-out .15s forwards;
@@ -992,6 +896,27 @@ label{
 		//{ ** INCLUDES
 			@include page-properties-default();
 		//} ** END INCLUDES
+
+		>.upcoming{
+
+			//{ ** INCLUDES
+				@include notSelectable();
+			//} ** END INCLUDES
+			
+			font-size: 2em;
+			left: 50%;
+			transform: translateX(-50%);
+
+			color: white;
+			font-weight: 300;
+			float: left;
+			margin-top: 10vh;
+			margin-bottom: 30vh;
+			&.isMobile{
+				font-size: 1.5em;
+				margin-bottom: 20vh;
+			}
+		}
 		
 		
 	}
@@ -1001,21 +926,42 @@ label{
 		//{ ** INCLUDES
 			@include page-properties-default();
 		//} ** END INCLUDES
-		
+		>.faq-title{
+
+			//{ ** INCLUDES
+				@include notSelectable();
+			//} ** END INCLUDES
+			
+			font-size: 2em;
+			left: 50%;
+			transform: translateX(-50%);
+
+			color: white;
+			font-weight: 300;
+			float: left;
+			margin-top: 10vh;
+			margin-bottom: 30vh;
+			&.isMobile{
+				font-size: 1.5em;
+				margin-bottom: 20vh;
+			}
+		}
 		>label>.item{
-			height: 50px;
+			height: 100px;
 			border-style: solid;
-			border-radius: 5px;
+			// border-radius: 5px;
 			border-width: 2px;
 			border-color: white;
+			// background-color: rgba(255,255,255, 0.7);
 			width: 40%;
 			margin: 0 5%;
-			padding: 1%;
+			padding-right: 1%;
 			float: left;
 			color: white;
 			margin-bottom: 40px;
 			font-weight: 300;
 			overflow: hidden;
+			cursor: pointer;
 		
 			&.isMobile{
 				width: 86%;
@@ -1031,12 +977,37 @@ label{
 				margin-left: 2.5%;
 			}
 
+			>.arrow{
+				width: 100px;
+				float: left;
+				background-color: rgba(255,255,255, 0.6);
+				height: 100px;
+
+				>.element{
+					background-color: $color-black;
+					width: 30px;
+					height: 10px;
+					position: absolute;
+					top: 50%;
+					transform: translateY(-50%);
+
+					&.e1{
+						@include rotate(45);
+						left: 27.5%;
+					}
+
+					&.e2{
+						@include rotate(135);
+						right: 27.5%;
+					}
+				}
+			}
 			>.title{
-				width: 100%;
-				min-height: 50px;
-				max-height: 50px;
-				cursor: pointer;
-				font-size: 1em;
+				width: calc(97% - 100px);
+				float: left;
+				height: 100px;
+				margin-left: 3%;
+				font-size: 20px;
 				>div{
 					position: absolute;
 					width: 100%;
@@ -1056,7 +1027,12 @@ label{
 			}
 
 			>.content{
-				display: none;
+				float: left;
+				width: 100%;
+				padding: 20px 5px;
+				border-top: solid 1px $color-black;
+				text-align: center;
+				// margin-top: 15px;
 			}
 			>.modified{
 				display: none;
@@ -1064,6 +1040,88 @@ label{
 
 
 		}
+		@keyframes faq-item-open{
+			0%{
+				height: 100px;
+				background-color: $color-black;
+				color: white;
+				overflow: hidden;
+				cursor: pointer;
+				
+			}
+			99%{
+				overflow: hidden;
+				cursor: pointer;
+			}
+			100%{
+				height: 400px;
+				background-color: white;
+				color: black;
+				overflow: auto;
+				cursor: default;
+			}
+		}
+		@keyframes faq-e1-open{
+			from{
+				@include rotate(45);
+			}
+			to{
+				@include rotate(135);
+			}
+		}
+		@keyframes faq-e2-open{
+			from{
+				@include rotate(135);
+			}
+			to{
+				@include rotate(45);
+			}
+		}
+		@keyframes faq-item-close{
+			0%{
+				height: 400px;
+				background-color: white;
+				color: black;
+				overflow: auto;
+				cursor: default;
+			}
+			1%{
+				overflow: hidden;
+				cursor: pointer;
+			}
+			30%{
+				height: 100px;
+				
+			}
+
+			50%{
+				background-color: white;
+				color: black;
+			}
+			100%{
+				background-color: $color-black;
+				color: white;
+				
+			}
+		}
+		@keyframes faq-e1-close{
+			from{
+				@include rotate(135);
+			}
+			to{
+				@include rotate(45);
+			}
+			
+		}
+		@keyframes faq-e2-close{
+			from{
+				@include rotate(45);
+			}
+			to{
+				@include rotate(135);
+			}
+		}
+		
 		
 	}
 }
