--- a/assets/css/spring2017/main.css
+++ b/assets/css/spring2017/main.css
@@ -13,14 +13,14 @@ body {
   z-index: 1; }
 
 input[type=checkbox] {
-  position: absolute;
-  top: -9999px;
-  left: -9999px; }
+  position: relative;
+  float: left;
+  display: none; }
 
 input[type=radio] {
-  position: absolute;
-  top: -9999px;
-  left: -9999px; }
+  position: relative;
+  float: left;
+  display: none; }
 
 label {
   z-index: 999999; }
@@ -35,7 +35,7 @@ label {
   .hackbot > .nav-links.isMobile {
     bottom: 20px;
     right: 20px;
-    position: absolute;
+    position: fixed;
     max-width: calc(107px * 2); }
     .hackbot > .nav-links.isMobile > .modified-link, .hackbot > .nav-links.isMobile > noscript > .modified-link {
       float: left;
@@ -259,7 +259,9 @@ label {
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg); } }
 #navigator:checked ~ section.page {
-  width: 400px; }
+  width: 400px;
+  height: 100vh;
+  overflow: hidden; }
   #navigator:checked ~ section.page.isMobile {
     width: 0px; }
   #navigator:checked ~ section.page > .welcome > .container:not(.isMobile) {
@@ -610,7 +612,7 @@ label {
       bottom: 80px;
       left: 50%;
       transform: translateX(-50%); }
-      .page > .welcome > .nav-links:not(.isMobile) > .modified-link {
+      .page > .welcome > .nav-links:not(.isMobile) > .modified-link:not(.isMobile) {
         float: left;
         width: auto;
         height: auto;
@@ -626,12 +628,12 @@ label {
         -webkit-transition: all 0.2s ease;
         -ms-transition: all 0.2s ease;
         transition: all 0.2s ease; }
-        .page > .welcome > .nav-links:not(.isMobile) > .modified-link:visted {
+        .page > .welcome > .nav-links:not(.isMobile) > .modified-link:not(.isMobile):visted {
           outline: none;
           text-decoration: none;
           color: inherit;
           -webkit-tap-highlight-color: transparent; }
-        .page > .welcome > .nav-links:not(.isMobile) > .modified-link.schedule {
+        .page > .welcome > .nav-links:not(.isMobile) > .modified-link:not(.isMobile).schedule {
           animation: schedule-start .4s ease-out .2s forwards; }
 @keyframes schedule-start {
   from {
@@ -640,7 +642,7 @@ label {
   to {
     bottom: 0px;
     opacity: 1; } }
-        .page > .welcome > .nav-links:not(.isMobile) > .modified-link.faq {
+        .page > .welcome > .nav-links:not(.isMobile) > .modified-link:not(.isMobile).faq {
           animation: faq-start .4s ease-out .2s forwards; }
 @keyframes faq-start {
   from {
@@ -649,7 +651,7 @@ label {
   to {
     bottom: 0px;
     opacity: 1; } }
-        .page > .welcome > .nav-links:not(.isMobile) > .modified-link.sponsors {
+        .page > .welcome > .nav-links:not(.isMobile) > .modified-link:not(.isMobile).sponsors {
           animation: sponsors-start .4s ease-out .2s forwards; }
 @keyframes sponsors-start {
   from {
@@ -658,7 +660,7 @@ label {
   to {
     bottom: 0px;
     opacity: 1; } }
-        .page > .welcome > .nav-links:not(.isMobile) > .modified-link > .link {
+        .page > .welcome > .nav-links:not(.isMobile) > .modified-link:not(.isMobile) > .link {
           color: white;
           font-weight: 300;
           font-size: 1em;
@@ -676,7 +678,7 @@ label {
   to {
     background-color: white;
     color: black; } }
-        .page > .welcome > .nav-links:not(.isMobile) > .modified-link:hover span {
+        .page > .welcome > .nav-links:not(.isMobile) > .modified-link:not(.isMobile):hover span {
           animation: link-highlight .2s ease-out 0s forwards; }
     .page > .welcome > .nav-links.isMobile {
       display: none; }
@@ -723,6 +725,8 @@ label {
     overflow-x: hidden;
     float: left;
     margin-bottom: 40vh; }
+    .page > .faq:not(.isMobile) {
+      min-width: 770px; }
     .page > .faq.isMobile {
       min-height: calc(100vh + 60px);
       -moz-transition: height 999999999999s ease-in !important;
@@ -780,6 +784,7 @@ label {
         width: 100px;
         float: left;
         background-color: rgba(255, 255, 255, 0.6);
+        border-right: solid 1px rgba(255, 255, 255, 0);
         height: 100px; }
         .page > .faq > label > .item > .arrow > .element {
           background-color: #161616;
@@ -803,11 +808,22 @@ label {
             -o-transform: rotate(135deg);
             right: 27.5%; }
       .page > .faq > label > .item > .title {
-        width: calc(97% - 100px);
+        -webkit-user-select: none;
+        /* Chrome/Safari */
+        -moz-user-select: none;
+        /* Firefox */
+        -ms-user-select: none;
+        /* IE10+ */
+        /* Rules below not implemented in browsers yet */
+        -o-user-select: none;
+        user-select: none;
+        cursor: default;
+        width: calc(97% - 101px);
         float: left;
         height: 100px;
         margin-left: 3%;
-        font-size: 20px; }
+        font-size: 20px;
+        cursor: pointer; }
         .page > .faq > label > .item > .title > div {
           position: absolute;
           width: 100%;
@@ -827,28 +843,22 @@ label {
           cursor: default; }
       .page > .faq > label > .item > .content {
         float: left;
-        width: 100%;
-        padding: 20px 5px;
+        width: calc(100% - 40px);
+        padding: 20px 20px;
         border-top: solid 1px #161616;
-        text-align: center; }
+        text-align: center;
+        -webkit-user-select: none;
+        /* Chrome/Safari */
+        -moz-user-select: none;
+        /* Firefox */
+        -ms-user-select: none;
+        /* IE10+ */
+        /* Rules below not implemented in browsers yet */
+        -o-user-select: none;
+        user-select: none;
+        cursor: default; }
       .page > .faq > label > .item > .modified {
         display: none; }
-@keyframes faq-item-open {
-  0% {
-    height: 100px;
-    background-color: #161616;
-    color: white;
-    overflow: hidden;
-    cursor: pointer; }
-  99% {
-    overflow: hidden;
-    cursor: pointer; }
-  100% {
-    height: 400px;
-    background-color: white;
-    color: black;
-    overflow: auto;
-    cursor: default; } }
 @keyframes faq-e1-open {
   from {
     transform: rotate(45deg);
@@ -875,24 +885,16 @@ label {
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg); } }
-@keyframes faq-item-close {
-  0% {
-    height: 400px;
-    background-color: white;
-    color: black;
-    overflow: auto;
-    cursor: default; }
-  1% {
-    overflow: hidden;
-    cursor: pointer; }
-  30% {
-    height: 100px; }
-  50% {
-    background-color: white;
-    color: black; }
-  100% {
-    background-color: #161616;
-    color: white; } }
+@keyframes faq-arrow-open {
+  from {
+    border-right-color: rgba(255, 255, 255, 0); }
+  to {
+    border-right-color: #161616; } }
+@keyframes faq-arrow-close {
+  from {
+    border-right-color: #161616; }
+  to {
+    border-right-color: rgba(255, 255, 255, 0); } }
 @keyframes faq-e1-close {
   from {
     transform: rotate(135deg);
@@ -919,5 +921,79 @@ label {
     -webkit-transform: rotate(135deg);
     -moz-transform: rotate(135deg);
     -o-transform: rotate(135deg); } }
+  .page > .sponsors {
+    min-height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
+    float: left;
+    margin-bottom: 40vh; }
+    .page > .sponsors.isMobile {
+      min-height: calc(100vh + 60px);
+      -moz-transition: height 999999999999s ease-in !important;
+      -o-transition: height 999999999999s ease-in !important;
+      -webkit-transition: height 999999999999s ease-in !important;
+      transition: height 999999999999s ease-in !important;
+      -ms-transition: height 999999999999s ease-in !important; }
+    .page > .sponsors.isMobile {
+      margin-bottom: 10vh; }
+    .page > .sponsors > .sponsors-title {
+      -webkit-user-select: none;
+      /* Chrome/Safari */
+      -moz-user-select: none;
+      /* Firefox */
+      -ms-user-select: none;
+      /* IE10+ */
+      /* Rules below not implemented in browsers yet */
+      -o-user-select: none;
+      user-select: none;
+      cursor: default;
+      font-size: 2em;
+      left: 50%;
+      transform: translateX(-50%);
+      color: white;
+      font-weight: 300;
+      float: left;
+      margin-top: 10vh;
+      margin-bottom: 30vh; }
+      .page > .sponsors > .sponsors-title.isMobile {
+        font-size: 1.5em;
+        margin-bottom: 20vh; }
+  .page > .about {
+    min-height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
+    float: left;
+    margin-bottom: 40vh; }
+    .page > .about.isMobile {
+      min-height: calc(100vh + 60px);
+      -moz-transition: height 999999999999s ease-in !important;
+      -o-transition: height 999999999999s ease-in !important;
+      -webkit-transition: height 999999999999s ease-in !important;
+      transition: height 999999999999s ease-in !important;
+      -ms-transition: height 999999999999s ease-in !important; }
+    .page > .about.isMobile {
+      margin-bottom: 10vh; }
+    .page > .about > .about-title {
+      -webkit-user-select: none;
+      /* Chrome/Safari */
+      -moz-user-select: none;
+      /* Firefox */
+      -ms-user-select: none;
+      /* IE10+ */
+      /* Rules below not implemented in browsers yet */
+      -o-user-select: none;
+      user-select: none;
+      cursor: default;
+      font-size: 2em;
+      left: 50%;
+      transform: translateX(-50%);
+      color: white;
+      font-weight: 300;
+      float: left;
+      margin-top: 10vh;
+      margin-bottom: 30vh; }
+      .page > .about > .about-title.isMobile {
+        font-size: 1.5em;
+        margin-bottom: 20vh; }
 
 /*# sourceMappingURL=main.css.map */
