--- a/assets/css/spring2017/main.scss
+++ b/assets/css/spring2017/main.scss
@@ -18,14 +18,20 @@ body{
 }
 
 input[type=checkbox] {
-   position: absolute;
-   top: -9999px;
-   left: -9999px;
+	// position: absolute;
+	// top: -9999px;
+	// left: -9999px;
+   position: relative;
+   float: left;
+   display: none;
 }
 input[type=radio] {
-   position: absolute;
-   top: -9999px;
-   left: -9999px;
+	// position: absolute;
+	// top: -9999px;
+	// left: -9999px;
+   position: relative;
+   float: left;
+   display: none;
 }
 
 label{
@@ -49,7 +55,7 @@ label{
 		//{ ** ATTRIBUTES
 			bottom: 20px;
 			right: 20px;
-			position: absolute;
+			position: fixed;
 			max-width: calc(107px * 2);
 		//} ** END ATTRIBUTES
 		
@@ -261,6 +267,8 @@ label{
 			
 	//{ ** ATTRIBUTES
 		width: 400px;
+		height: 100vh;
+		overflow: hidden;
 	//} ** END ATTRIBUTES
 	
 	&.isMobile{
@@ -668,6 +676,26 @@ label{
 
 	}
 
+	@mixin page-title-default(){
+		//{ ** INCLUDES
+			@include notSelectable();
+		//} ** END INCLUDES
+		
+		font-size: 2em;
+		left: 50%;
+		transform: translateX(-50%);
+
+		color: white;
+		font-weight: 300;
+		float: left;
+		margin-top: 10vh;
+		margin-bottom: 30vh;
+		&.isMobile{
+			font-size: 1.5em;
+			margin-bottom: 20vh;
+		}
+	}
+
 	&.hackbot-open{
 		height: 100vh;
 		overflow: hidden;
@@ -792,7 +820,7 @@ label{
 				transform: translateX(-50%);
 			//} ** END ATTRIBUTES
 			
-			>.modified-link{
+			>.modified-link:not(.isMobile){
 
 				//{ ** ATTRIBUTES
 					float: left;
@@ -899,23 +927,11 @@ label{
 
 		>.upcoming{
 
+					
 			//{ ** INCLUDES
-				@include notSelectable();
+				@include page-title-default();
 			//} ** END INCLUDES
 			
-			font-size: 2em;
-			left: 50%;
-			transform: translateX(-50%);
-
-			color: white;
-			font-weight: 300;
-			float: left;
-			margin-top: 10vh;
-			margin-bottom: 30vh;
-			&.isMobile{
-				font-size: 1.5em;
-				margin-bottom: 20vh;
-			}
 		}
 		
 		
@@ -923,28 +939,22 @@ label{
 
 	>.faq{
 
+
+		&:not(.isMobile){
+			min-width: 770px;
+		}
+
 		//{ ** INCLUDES
 			@include page-properties-default();
 		//} ** END INCLUDES
 		>.faq-title{
 
+					
 			//{ ** INCLUDES
-				@include notSelectable();
+				@include page-title-default();
 			//} ** END INCLUDES
 			
-			font-size: 2em;
-			left: 50%;
-			transform: translateX(-50%);
 
-			color: white;
-			font-weight: 300;
-			float: left;
-			margin-top: 10vh;
-			margin-bottom: 30vh;
-			&.isMobile{
-				font-size: 1.5em;
-				margin-bottom: 20vh;
-			}
 		}
 		>label>.item{
 			height: 100px;
@@ -981,6 +991,7 @@ label{
 				width: 100px;
 				float: left;
 				background-color: rgba(255,255,255, 0.6);
+				border-right: solid 1px rgba(255,255,255, 0);
 				height: 100px;
 
 				>.element{
@@ -1003,11 +1014,17 @@ label{
 				}
 			}
 			>.title{
-				width: calc(97% - 100px);
+
+				//{ ** INCLUDES
+					@include notSelectable();
+				//} ** END INCLUDES
+				
+				width: calc(97% - 101px);
 				float: left;
 				height: 100px;
 				margin-left: 3%;
 				font-size: 20px;
+				cursor: pointer;
 				>div{
 					position: absolute;
 					width: 100%;
@@ -1015,6 +1032,9 @@ label{
 					top: 50%;
 					transform: translateY(-50%);
 				}
+
+
+				
 
 				&.isMobile{
 
@@ -1028,11 +1048,16 @@ label{
 
 			>.content{
 				float: left;
-				width: 100%;
-				padding: 20px 5px;
+				width: calc(100% - 40px);
+				padding: 20px 20px;
 				border-top: solid 1px $color-black;
 				text-align: center;
 				// margin-top: 15px;
+
+				//{ ** INCLUDES
+					@include notSelectable();
+				//} ** END INCLUDES
+				
 			}
 			>.modified{
 				display: none;
@@ -1040,27 +1065,29 @@ label{
 
 
 		}
-		@keyframes faq-item-open{
-			0%{
-				height: 100px;
-				background-color: $color-black;
-				color: white;
-				overflow: hidden;
-				cursor: pointer;
+
+		// @keyframes faq-item-open{
+		// 	0%{
+		// 		height: 100px;
+		// 		background-color: $color-black;
+		// 		color: white;
+		// 		overflow: hidden;
+		// 		cursor: pointer;
+
 				
-			}
-			99%{
-				overflow: hidden;
-				cursor: pointer;
-			}
-			100%{
-				height: 400px;
-				background-color: white;
-				color: black;
-				overflow: auto;
-				cursor: default;
-			}
-		}
+		// 	}
+		// 	99%{
+		// 		overflow: hidden;
+		// 		cursor: pointer;
+		// 	}
+		// 	100%{
+		// 		height: 400px;
+		// 		background-color: white;
+		// 		color: black;
+		// 		overflow: auto;
+		// 		cursor: default;
+		// 	}
+		// }
 		@keyframes faq-e1-open{
 			from{
 				@include rotate(45);
@@ -1077,33 +1104,51 @@ label{
 				@include rotate(45);
 			}
 		}
-		@keyframes faq-item-close{
-			0%{
-				height: 400px;
-				background-color: white;
-				color: black;
-				overflow: auto;
-				cursor: default;
-			}
-			1%{
-				overflow: hidden;
-				cursor: pointer;
-			}
-			30%{
-				height: 100px;
-				
-			}
 
-			50%{
-				background-color: white;
-				color: black;
+		@keyframes faq-arrow-open{
+			from{
+				border-right-color: rgba(255,255,255,0);
 			}
-			100%{
-				background-color: $color-black;
-				color: white;
-				
+			to{
+				border-right-color: $color-black;
 			}
 		}
+
+		@keyframes faq-arrow-close{
+			from{
+				border-right-color: $color-black;
+			}
+			to{
+				border-right-color: rgba(255,255,255,0);
+			}
+		}
+		// @keyframes faq-item-close{
+		// 	0%{
+		// 		height: 400px;
+		// 		background-color: white;
+		// 		color: black;
+		// 		overflow: auto;
+		// 		cursor: default;
+		// 	}
+		// 	1%{
+		// 		overflow: hidden;
+		// 		cursor: pointer;
+		// 	}
+		// 	30%{
+		// 		height: 100px;
+				
+		// 	}
+
+		// 	50%{
+		// 		background-color: white;
+		// 		color: black;
+		// 	}
+		// 	100%{
+		// 		background-color: $color-black;
+		// 		color: white;
+				
+		// 	}
+		// }
 		@keyframes faq-e1-close{
 			from{
 				@include rotate(135);
@@ -1123,6 +1168,34 @@ label{
 		}
 		
 		
+	}
+
+	>.sponsors{
+
+		//{ ** INCLUDES
+			@include page-properties-default();
+		//} ** END INCLUDES
+
+		>.sponsors-title{
+
+			//{ ** INCLUDES
+				@include page-title-default();
+			//} ** END INCLUDES
+			
+		}
+		
+	}
+
+	>.about{
+
+		//{ ** INCLUDES
+			@include page-properties-default();
+		//} ** END INCLUDES
+		>.about-title{
+			//{ ** INCLUDES
+				@include page-title-default();
+			//} ** END INCLUDES
+		}
 	}
 }
 
