--- a/assets/css/spring2017/variables.scss
+++ b/assets/css/spring2017/variables.scss
@@ -10,6 +10,7 @@ $font-global: 'Lato', sans-serif;
 $color-black: rgba(22,22,22,1);
 $color-black-50: rgba(22,22,22,0.5);
 $color-blue: #0039A6;
+$color-link: #82ddf0;
 /////////////////////////////////////////// END COLORS ///////////////////////////////////////////
 
 /////////////////////////////////////////// MIXINS ///////////////////////////////////////////
