--- a/assets/css/spring2017/main.scss
+++ b/assets/css/spring2017/main.scss
@@ -9,7 +9,15 @@ body{
 		height: auto;
 		width: auto;
 	//} ** END ATTRIBUTES
-	
+	&.isMobile{
+		height: 100vh;
+		overflow-y: auto;
+
+		//{ ** INCLUDES
+			@include freezeHeight();
+		//} ** END INCLUDES
+		
+	}
 }
 
 *{
@@ -38,6 +46,29 @@ label{
 	z-index: 999999;
 }
 
+iframe{
+	// background-color: black;
+}
+
+#hackbot_search{
+
+	position: fixed;
+	z-index: 2;
+	width: calc(100vw - 500px);
+	left: 100px;
+	height: 100vh;
+	border: none;
+	visibility: hidden;
+	opacity: 0;
+	// background-color: black;
+	&.isMobile{
+		width: 100%;
+		left: 0;
+		height: calc(100vh - 150px);
+		border-bottom: solid 1px white;
+	}
+}
+
 
 .hackbot{
 
@@ -49,6 +80,11 @@ label{
 		position: fixed;
 		z-index: 0;
 	//} ** END ATTRIBUTES
+
+	>.hackbot_search{
+		position: relative;
+		float: left;
+	}
 	
 	>.nav-links.isMobile{
 
